[package]
name = "rust_graph_util"
version = "0.1.0"
edition = "2021"

[[bin]]
name= "speedicycle"
path="src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.11.0"
num = "0.4.1"
petgraph = "0.6.4"
serde_json = "1.0.107"
