[package]
name = "speedicycle"
version = "0.1.2"
edition = "2021"
description = "A simple tool for locating fixed-length circuits in undirected graphs, built atop petgraph"
license = "MIT"

[[bin]]
name= "speedicycle"
path="src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
geojson = "0.24.1"
itertools = "0.11.0"
num = "0.4.1"
petgraph = "0.6.4"
serde = {version = "1.0.188", features = ["derive", "serde_derive"]}
serde_json = "1.0.107"
